--- a/settings.json.template
+++ b/settings.json.template
@@ -1,4 +1,13 @@
 {
+  "Twit": {
+    "test": false,
+    "options": {
+      "consumer_key": "",
+      "consumer_secret": "",
+      "access_token": "",
+      "access_token_secret": ""
+    }
+  },
   "AWSAccessKeyId" : "<AWS KEY>",
   "AWSSecretAccessKey" : "<AWS SECRET>",
   "AWSBucket" : "<AWS BUCKET>"
