Move url for Twit link to settings.json

--- a/settings.json.template
+++ b/settings.json.template
@@ -2,6 +2,7 @@
   "development": false,
   "Twit": {
     "test": false,
+    "url": "http://openstrategynetwork.com",
     "options": {
       "consumer_key": "",
       "consumer_secret": "",
