Add empty users.roles object to settings.json

--- a/settings.json.template
+++ b/settings.json.template
@@ -11,6 +11,8 @@
     }
   },
   "users": {
+    "roles": {
+    }
   },
   "AWSAccessKeyId" : "<AWS KEY>",
   "AWSSecretAccessKey" : "<AWS SECRET>",
