Add users.roles.default to settings.json

--- a/settings.json.template
+++ b/settings.json.template
@@ -12,7 +12,8 @@
   },
   "users": {
     "roles": {
-      "admin": "admin"
+      "admin": "admin",
+      "default": ""
     }
   },
   "AWSAccessKeyId" : "<AWS KEY>",
