--- a/settings.json.template
+++ b/settings.json.template
@@ -105,7 +105,7 @@
     "users": {
       "roles": {
         "admin": "admin",
-        "default": ""
+        "default": "admin"
       }
     }
   }
