adding google analytics

--- a/settings.json.template
+++ b/settings.json.template
@@ -98,6 +98,9 @@
         "admin": "admin",
         "default": "admin"
       }
+    },
+    "analyticsSettings": {
+      "Google Analytics" : {"trackingId": "UA-XXXXXXXXXX"}
     }
   }
 }
