Git-ignore mup.json file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ settings.json
 ## IntelliJ IDEA files
 .idea
 *.iml
+
+## Meteor Up X (mupx) config file
+## https://github.com/arunoda/meteor-up/tree/mupx
+mup.json
