--- a/settings.json.template
+++ b/settings.json.template
@@ -106,6 +106,10 @@
     },
     "analyticsSettings": {
       "Google Analytics" : {"trackingId": "UA-XXXXXXXXXX"}
+    },
+    "kadira": {
+      "appId": "Id",
+      "appSecret": "Secret" 
     }
   }
 }
